# FEMSolver

./: CMakeLists.txt  LICENSE.txt  READ.ME  README.md
src/: Application.hpp  README.md  main.cpp
src/data_structures/: Array.hpp  List.hpp  Map.hpp  StaticArray.hpp
src/geometry/: Boundaries.hpp  BridsonGrid.hpp  Domain.hpp  KDTree.hpp  Point.hpp  PoissonRadiusField.hpp  Triangulation.hpp
src/graphics/: Camera.hpp  ColorMaps.hpp  EBO.hpp  Framebuffer.hpp  Renderbuffer.hpp  Renderer.hpp  Shader.hpp  TextRenderer.hpp  Texture.hpp  UniformBuffer.hpp  VAO.hpp  VBL.hpp  VBO.hpp
src/graphics/shaders/: background.frag  background.vert  grid.frag  grid.vert  mesh.frag  plot.frag  plot.vert  text.frag  text.vert
src/math/: Matrix.hpp  Polynomial.hpp  Vector.hpp
src/solver/: BoundaryConditionManager.hpp  FiniteElement.hpp  MaterialManager.hpp  Mesh.hpp  Node.hpp  ReferenceElement.hpp  Solver.hpp
src/solver/sparse/: Matrix.hpp  Row.hpp  RowElement.hpp  Vector.hpp
src/tools/: Random.hpp
src/window/: GUI.hpp  InputManager.hpp  InputReciever.hpp  Window.hpp
